<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Taximetro_App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="registro">Registro</string>
    <string name="nombres">Nombres :</string>
    <string name="apellidos">Apellidos :</string>
    <string name="email">E-mail :</string>
    <string name="usuario">Usuario :</string>
    <string name="contrasenia">Contraseña :</string>
    <string name="registrarse">Registrarse</string>
    <string name="cancelar">Cancelar</string>
    <string name="usuario_">Usuario:</string>
    <string name="contrase_a_">Contraseña:</string>
    <string name="title_activity_consulta_">Consulta_Activity</string>
    <string name="title_activity_consultas">ConsultasActivity</string>
    <string name="Encendido">ON</string>
    <string name="Apagado">OFF</string>
    <string name="title_activity_item__result">Item_ResultActivity</string>
    <string name="title_activity_taxi">TaxiActivity</string>
    <string name="title_activity_mapa">MapaActivity</string>
    <string name="Satelite">Satélite</string>
    <string name="Normal">Normal</string>
    <string name="title_activity_mapas">MapasActivity</string>
    <string name="Tipo_tarifa">Tipo de Tarifa</string>
    <string name="title_activity_menu__consultas">Menu_ConsultasActivity</string>
    <string name="title_activity_tabla_ant">TablaANTActivity</string>
    <string name="title_activity_item_tabla">Item_tablaActivity</string>
    <string name="title_activity_item_tablas">ItemTablasActivity</string>
    <string name="title_activity_item_tablita">ItemTablitaActivity</string>
    <string name="title_activity_consulta_carrera">Consulta_carrera</string>
    <string name="title_activity_item_detalle">Item_detalle</string>
    <string name="partida_">Partida:</string>
    <string name="llegada_">LLegada:</string>
    <string name="text_costo_carrera">"Costo de la Carrera: "</string>
    <string name="kilometros_recorridos">"Kilometros Recorridos: "</string>
    <string name="text_tiempo_transcurrido">"Tiempo Transcurrido: "</string>
    <string name="text_sitio_partida">Sitio de Partida:</string>
    <string name="text_sitio_llegada">Sitio de LLegada:</string>
    <string name="text_iniciar_carrera">Iniciar Carrera</string>
    <string name="text_cancelar">Cancelar</string>
    <string name="title_activity_tabla_carreras">TablaCarrerasActivity</string>
    <string name="title_activity_item_carrera">ItemCarreraActivity</string>
    <string name="title_activity_detalle_carrera">DetalleCarreraActivity</string>
    <string name="nombre_app">Taximetro</string>
    <string name="Bienvenida">Bienvenido</string>
    <string name="registro_usuario">Nuevo Usuario</string>
    <string name="funciones">¿Qué desea hacer?</string>
    <string name="taximetro">Registro de Carreras</string>
    <string name="mapa">Su ubicación</string>
    <string name="carreras_realizadas">Carreras Registradas</string>
    <string name="title_activity_custom_dialog">Custom_dialog</string>
    <string name="text_escoja_fecha">Escoja la Fecha:</string>

</resources>