<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TaxiActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bandera" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

        </TableRow>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

        </LinearLayout>

        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewDest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tipo_tarifa" />

            <TextView
                android:id="@+id/textViewTipoTarifa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/textViewRecorrido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_iniciar_carrera" />

            <ToggleButton
                android:id="@+id/toggleButtonSat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ON_OFF"
                android:text="ToggleButton"
                android:textOff="@string/Apagado"
                android:textOn="@string/Encendido" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewOrig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/text_tiempo_transcurrido" />

            <Chronometer
                android:id="@+id/CronometroTiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:text="TextView" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewKm "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/kilometros_recorridos" />

            <TextView
                android:id="@+id/textViewkilo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/text_costo_carrera" />

            <TextView
                android:id="@+id/textViewCosto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_sitio_partida" />

            <EditText
                android:id="@+id/editTextPar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_sitio_llegada" />

            <EditText
                android:id="@+id/editTextLleg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <Button
                android:id="@+id/buttonGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onGuardar"
                android:text="Guardar" />

            <Button
                android:id="@+id/buttonCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCancelar"
                android:text="@string/text_cancelar" />

        </TableRow>

    </TableLayout>

</ScrollView>
